--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
     <title>Hello Coursera!</title>
 </head>
 <body>
-<h1>hello coursera!wow I'm happy:)</h1> 
+    <h1>hello. are you working?
+    </h1> 
 </body>
 </html>
