--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Coursera!</title>
+    <title>welcome!</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-    <h1>hello. are you working?
-    </h1> 
+    <h1 class="header">What is important?</h1> 
+    <p class="main">The most important thing is being consistent and doing it</p>
+    <h2 class="header">ORDER AND CHAOS</h2>
+    <p>where is the balance between order and chaos? Its not about the balance. its about the underlying rules.</p>
 </body>
 </html>
