--- a/site/index.html
+++ b/site/index.html
@@ -5,12 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
+
 <body>
-    <h1 class="header">What is important?</h1> 
-    <p class="main">The most important thing is being consistent and doing it</p>
-    <h2 class="header">ORDER AND CHAOS</h2>
-    <p>where is the balance between order and chaos? Its not about the balance. its about the underlying rules.</p>
+    <div class="container">
+    <h1 id="header" >What is important?</h1> 
+    <p>The most important thing is being consistent and doing it.
+    </p>
+    <h2 id="header">ORDER AND CHAOS</h2>
+    <p>where is the balance between order and chaos? Its not about the balance. its about the underlying rules.
+    </p>
+    </div>
+    <div id="rules">
+    
+    <h1 id="header">
+        12 rules for life:
+    </h1>
+    <ol>
+        <li>stand up straight with your shoulders back. </li>
+        <li>treat yourself like you are trying to help somone.</li>
+        <li>find friends who want the best for you.</li>
+        <li>measure yourself with your yesterday not someone's today</li>
+        <li>...</li>
+    </ol>
+    </div>
 </body>
 </html>
