--- a/site/index.html
+++ b/site/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <div class="container">
-    <h1 id="header" >What is important?</h1> 
+    <div id="main">
+    <h1 id="header" >What's important?</h1> 
     <p>The most important thing is being consistent and doing it.
     </p>
-    <h2 id="header">ORDER AND CHAOS</h2>
+    <h2 id="header">order and chaos</h2>
     <p>where is the balance between order and chaos? Its not about the balance. its about the underlying rules.
     </p>
     </div>
