--- a/site/index.html
+++ b/site/index.html
@@ -1,34 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+
 </head>
 
 <body>
-    <div id="main">
-    <h1 id="header" >What's important?</h1> 
-    <p>The most important thing is being consistent and doing it.
-    </p>
-    <h2 id="header">order and chaos</h2>
-    <p>where is the balance between order and chaos? Its not about the balance. its about the underlying rules.
-    </p>
-    </div>
-    <div id="rules">
-    
-    <h1 id="header">
-        12 rules for life:
-    </h1>
-    <ol>
-        <li>stand up straight with your shoulders back. </li>
-        <li>treat yourself like you are trying to help somone.</li>
-        <li>find friends who want the best for you.</li>
-        <li>measure yourself with your yesterday not someone's today</li>
-        <li>...</li>
-    </ol>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 col-sm-3">
+                <h1>What's important?</h1>
+                <p>The most important thing is being consistent and doing it.
+                </p>
+                <h2>order and chaos</h2>
+                <p>where is the balance between order and chaos? Its not about the balance. its about the underlying
+                    rules.
+                </p>
+            </div>
+            <div class="col-md-6 col-sm-3">
+                <h1>12 rules for life:</h1>
+                <ol>
+                    <li>stand up straight with your shoulders back. </li>
+                    <li>treat yourself like you are trying to help somone.</li>
+                    <li>find friends who want the best for you.</li>
+                    <li>measure yourself with your yesterday not someone's today</li>
+                    <li>...</li>
+                </ol>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-3">
+                <h1>What's important?</h1>
+                <p>The most important thing is being consistent and doing it.
+                </p>
+                <h2>order and chaos</h2>
+                <p>where is the balance between order and chaos? Its not about the balance. its about the underlying
+                    rules.
+                </p>
+            </div>
+            <div class="col-md-6 col-sm-3">
+                <h1>12 rules for life:</h1>
+                <ol>
+                    <li>stand up straight with your shoulders back. </li>
+                    <li>treat yourself like you are trying to help somone.</li>
+                    <li>find friends who want the best for you.</li>
+                    <li>measure yourself with your yesterday not someone's today</li>
+                    <li>...</li>
+                </ol>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <h1>What's important?</h1>
+                <p>The most important thing is being consistent and doing it.
+                </p>
+                <h2>order and chaos</h2>
+                <p>where is the balance between order and chaos? Its not about the balance. its about the underlying
+                    rules.
+                </p>
+            </div>
+            <div class="col-xs-4">
+                <h1>12 rules for life:</h1>
+                <ol>
+                    <li>stand up straight with your shoulders back. </li>
+                    <li>treat yourself like you are trying to help somone.</li>
+                    <li>find friends who want the best for you.</li>
+                    <li>measure yourself with your yesterday not someone's today</li>
+                    <li>...</li>
+                </ol>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
